--- a/SalasDeJuntas/Content/css/style.css
+++ b/SalasDeJuntas/Content/css/style.css
@@ -36,7 +36,6 @@ a {
     font-size:2em;
 }
 .listaHoras{
-   
 }
 .listaHoras li{
     list-style-type:none;
@@ -55,11 +54,12 @@ a {
     }
 
 .cajaJunta{
-    background-color:rgba(255, 106, 0,0.50);
-    border:1px solid red;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    width:200px;
+    background-color:rgba(255, 106, 0,0.70);
+    /*border:1px solid red;*/
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    width:250px;
     position:absolute;
+    padding:5px;
     left:100px;
 }
